# cell-classification

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  tox.ini
Analysis/: Data_analysis_3Dvs2D.ipynb  Logistic_regression_and_Random_forest_compare_2D_to_3D.ipynb  analyze_baseline.ipynb  analyze_tensorboard.ipynb  curation_info.ipynb  example.json  gata1_fit.json  model_fit.py  pu1_fit.json  sca_fit.json  test_model_fit.py
Analysis/_outdated/: Data_analysis_3Dvs2D.ipynb  Logistic_regression_and_Random_forest_compare_2D_to_3D.ipynb  cd41_fitting.ipynb  crop_napari.py  find_labelcounts.py  mainv0.py  mainv1.py  pipe.ipynb
setup_json/: cd41_setup.json  gata_setup.json  model_runner_example.json  pu_setup.json  sca1_setup.json
src/nucleus_3d_classification/: call.py  caller_main.py  main.py  main_test.py  mainv1.py  napari.yaml  old_main.py  test.py
src/nucleus_3d_classification/_tests/: test_CustomDataset.py  test_ResNet.py  test_diff_columns.py  test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
src/nucleus_3d_classification/baseline_models/: cd41_fit.json  model_fit.py
src/nucleus_3d_classification/model_runner/: model_runner.py  param_grid.json
src/nucleus_3d_classification/models/: ResNet.py  model_wrapper.py  testmodels.py
src/nucleus_3d_classification/preprocess/: crop_napari.py  extract_2D_3D_features.py  generate_crops.py  histogram.py  napari_curation_and_labelling.py  present_curation.py  random_sampling.py
src/nucleus_3d_classification/utils/: datamodule.py  loss_fn.py  padding.py  show_slice.py  testdatamodule.py  transform.py
src/nucleus_3d_classification/utils/eval/: evals.py
