[project]
name = "cell-classification"
dynamic = ["version"]
description = "A cell classifier using information limited to images of DAPI stained nuclei."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Aurimas Greicius"},
  {email = "aurimasgreicius@yahoo.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
# Python version requirement
requires-python = "==3.12.2"

# Pip dependencies
dependencies = [
    "numpy",
    "magicgui",
    "qtpy",
    "scikit-image",
    "jsonargparse",
    "ipykernel",  # For Jupyter notebook support
    "joblib",     # For parallel runs, random forests
    "pandas"
]

# Conda dependencies
conda_dependencies = [
    "python=3.12.2",
    "pytorch=2.3.1",
    "torchvision=0.18.1",
    "pytorch-lightning=2.3.3",
    "matplotlib=3.9.1",
    "tensorboard=2.17.1",
    "scikit-image=0.22.0",
    "scikit-learn=1.5.1",
    "scipy=1.11.4",
    "pip=24.0",
    "lightning=2.3.3"
]


[project.optional-dependencies]
testing = [
    "tox",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt",  # https://pytest-qt.readthedocs.io/en/latest/
    "napari",
    "pyqt5",
]

[project.entry-points."napari.manifest"]
console_scripts = 
    caller = src.nucleus_3d_classification:caller
    main = src.nucleus_3d_classification:main

cell-classification = "nucleus_3d_classification:napari.yaml"



[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]


[tool.setuptools_scm]
write_to = "src/nucleus_3d_classification/_version.py"


[tool.black]
line-length = 79
target-version = ['py38', 'py39', 'py310']

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "SIM117", # flake8-simplify - some of merged with statements are not looking great with black, reanble after drop python 3.9
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py38"
fix = true
